examples/example_30/A/example_30.v
Require Import Foo.B.
Fail Check x.
